<resources>
    <string name="app_name">Phoenix</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="s_basic_info">Basic Information</string>
    <string name="house_code">House Code</string>
    <string name="allowed_char_name">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="allowed_char_email">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890._@-</string>
    <string name="allowed_char_default">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890.,#-_</string>
    <string name="f_name">*First Name</string>
    <string name="m_name">Middle Name</string>
    <string name="l_name">Last Name</string>
    <string name="h_nuber">House Number</string>
    <string name="h_cast">Cast</string>
    <string name="h_village">Village</string>
    <string name="h_Residence">Residence</string>
    <string name="h_membername">Member Name</string>
    <string name="qm_member_name">*Member Name</string>
    <string name="qm_gender">Gender</string>
    <string name="qm_dibility">Disability</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="h_qualification">Education*</string>
    <string name="h_RelationShip">Relationship with family head</string>
    <string name="h_Occupation">Occupation</string>
    <string name="h_family">Family Details</string>
    <string name="h_water">Source details</string>
    <string name="q_add_family">Add Family Member</string>
    <string name="save_draft">Save Draft</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="pinecode">Pincode</string>
    <string name="q_pincode">*Pincode</string>
    <string name="q_district">*District</string>
    <string name="q_state">*State</string>
    <string name="q_country">*Country</string>
    <string name="q_landid">Land</string>
    <string name="q_irigation">Source Of Irrigation</string>
    <string name="q_assignland">Assigned Land</string>
    <string name="q_Own">Own as per passbook</string>
    <string name="q_leasedin">Leased in</string>
    <string name="q_leasedout">Leased out</string>
    <string name="q_others">Others</string>
    <string name="q_landdetails">Land details</string>
    <string name="q_sourceids">Source</string>
    <string name="q_under_irigation">Area Under Irrigation</string>
    <string name="q_Season">Season</string>
    <string name="q_wateravailability">No of days of water availability</string>
    <string name="q_cropid">Crop</string>
    <string name="q_yiels">Yield in qty</string>
    <string name="q_inncom">Income in Rs</string>
    <string name="q_area">Area in ha</string>
    <string name="q_selling">Selling Space</string>
    <string name="q_Groundnut">Ground nut</string>
    <string name="q_Pulses">Pulses</string>
    <string name="q_Others">Others</string>
    <string name="q_total">Total</string>
    <string name="q_lower">Lower</string>
    <string name="q_Agriculture">Agriculture</string>
    <string name="q_watersource">Add water source</string>
    <string name="q_percentage">In Percentage(%)</string>
    <string name="q_wage">Wage labour</string>
    <string name="q_livestock">Livestock</string>
    <string name="q_miggrant">Migrant</string>
    <string name="q_skilled">Skilled work/ Income Generating activity</string>
    <string name="q_source_income">Source wise annual Income </string>
    <string name="q_job">Job</string>
    <string name="q_name">Name</string>
    <string name="q_no">Number</string>
    <string name="q_small">Small</string>
    <string name="q_big">Big</string>
    <string name="q_scarcity">Scarcity</string>
    <string name="q_months">How many months in year</string>
    <string name="q_assets">Assets</string>
    <string name="q_asset">Asset</string>
    <string name="q_type_asset">Type of asset</string>
    <string name="q_value_asset">Value (Rs)</string>
    <string name="q_loan">Loan Details</string>
    <string name="q_loan_id">Loans from</string>
    <string name="q_loan_amount">Loans amount</string>
    <string name="q_loan_interest">Interest rate</string>
    <string name="q_loan_purchase">Purpose for which taken</string>
    <string name="q_loan_remark">Remark</string>
    <string name="q_Plough">Plough</string>
    <string name="q_Bullock_cart">Bullock cart</string>
    <string name="q_Tractor">Tractor</string>
    <string name="q_Sprayer">Sprayer</string>
    <string name="q_Weeder">Weeder</string>
    <string name="q_Membership">Thrift</string>
    <string name="q_isMembership">Membership in SHG</string>
    <string name="q_Name_of_the_SHG">Name of the SHG</string>
    <string name="q_saving">Saving money</string>
    <string name="q_group">Membership in Groups</string>
    <string name="q_add_scarcity">Add Scarcity</string>
    <string name="q_add_Loan">Add Loan</string>
    <string name="q_add_crop">Add Crop</string>
    <string name="q_add_assets">Add Assets</string>
    <string name="q_add_land">Add Land</string>
    <string name="q_add_Live">Add Lvivestock</string>
    <string name="q_add_income">Add Income</string>
    <string name="q_cropdetails">Crop</string>
    <string name="q_agricultuure">Agriculture</string>
    <string name="q_mn_card">MNREGS Card </string>
    <string name="q_card_no">Card no</string>
    <string name="q_family_income">Total family income (In Rupees per annum)</string>
    <string name="q_total_family_income">Total family annual income (In Rupees per annum)</string>
    <string name="q_sc_item">Item</string>
    <string name="q_purchase">Purchasing? (Yes/No)</string>
    <string name="click">Click</string>
    <string name="attach">Attach</string>
    <string name="no_permission">Please grant the required permissions to use the app.</string>

    <!--Font-->
    <string name="brandon_reg">Brandon_reg</string>
    <string name="brandon_bold">BrandonText_Bold</string>
    <string name="brandon_light">BrandonText_Light</string>
    <string name="georgia">Georgia</string>
</resources>